--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,5 @@
+@import '~antd/dist/antd.less';
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.header{
+  background-color: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
