--- a/src/App.less
+++ b/src/App.less
@@ -42,4 +42,7 @@
 .header{
   background-color: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  z-index: 20;
+  position: sticky;
+  top: 0;
 }
